--- a/app/templates/accounting/profit_loss.html
+++ b/app/templates/accounting/profit_loss.html
@@ -175,11 +175,11 @@
                     <div class="row align-items-center">
                         <div class="col-md-6 border-end">
                             <div class="d-flex justify-content-between mb-2">
-                                <span>Part Associé (66.67%) :</span>
+                                <span>Part Sofiane (66.67%) :</span>
                                 <span class="fw-bold">{{ "{:,.2f}".format(resultat_net|float * 0.6667) }} DZD</span>
                             </div>
                             <div class="d-flex justify-content-between">
-                                <span>Part Gérante (33.33%) :</span>
+                                <span>Part Amel (33.33%) :</span>
                                 <span class="fw-bold">{{ "{:,.2f}".format(resultat_net|float * 0.3333) }} DZD</span>
                             </div>
                         </div>
@@ -226,10 +226,10 @@
                         <div class="p-3 bg-light rounded">
                             <p class="small mb-1"><strong>Répartition estimée :</strong></p>
                             <ul class="small mb-0">
-                                <li>Associé Principal (66.67%) : <span id="split_assoc">{{
+                                <li>Part Sofiane (66.67%) : <span id="split_assoc">{{
                                         "{:,.2f}".format(resultat_net|float * 0.6667) }}</span> DZD</li>
-                                <li>Gérante (33.33%) : <span id="split_manager">{{ "{:,.2f}".format(resultat_net|float *
-                                        0.3333) }}</span> DZD</li>
+                                <li>Part Amel (33.33%) : <span id="split_manager">{{ "{:,.2f}".format(resultat_net|float
+                                        * 0.3333) }}</span> DZD</li>
                             </ul>
                         </div>
                     </div>
